# mini-deploy

./: .env.example  .gitignore  README.md  config.py  deploy_api.py  deploy_spec.html  install.sh  logger_config.py  main.py  pyproject.toml  requirements.txt  state.py
deploy/: Dockerfile
templates/: base.html  deploy.html  deploy_spec.html  deploy_spec_page.html
templates/partials/: add_modal.html  deploy.js  edit_modal.html  project_detail.html  sidebar_item.html  spec_modal.html
